<?xml version="1.0" encoding="utf-8"?>
<layout>
    <!--used constraintlayout because of ease of positioning many elements in layout -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".login.LoginFragment">

   <TextView
       android:id="@+id/email_text"
       style="@style/title_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/email"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="@+id/guideline"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.33" />

   <EditText
       android:id="@+id/email_edit_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:autofillHints="@string/email"
       android:ems="10"
       android:inputType="textEmailAddress"
       android:labelFor="@id/email_text"
       app:layout_constraintStart_toStartOf="@+id/guideline"
       app:layout_constraintTop_toBottomOf="@+id/email_text" />

   <TextView
       android:id="@+id/password_text"
       style="@style/title_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:text="@string/password"
       app:layout_constraintStart_toStartOf="@+id/guideline"
       app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

   <EditText
       android:id="@+id/editTextTextPassword2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:ems="10"
       android:inputType="textPassword"
       android:labelFor="@id/password_text"
       app:layout_constraintStart_toStartOf="@+id/guideline"
       app:layout_constraintTop_toBottomOf="@+id/password_text" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintGuide_begin="94dp" />

   <Button
       android:id="@+id/button_new_login"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="24dp"
       android:text="@string/new_login"
       style ="@style/button_style"
       app:layout_constraintStart_toStartOf="@+id/guideline"
       app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

   <Button
       android:id="@+id/button_existing_login"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="4dp"
       android:text="@string/existing_login"
       style ="@style/button_style"
       app:layout_constraintStart_toStartOf="@+id/guideline"
       app:layout_constraintTop_toBottomOf="@+id/button_new_login" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>